xterm (316-1) UNRELEASED; urgency=low

  * New upstream release.
    - Add configure option --enable-initial-erase to set ptyInitialErase
      consistently with manpage, as well as adding a table in manpage to
      clarify the relationship between the resources related to the
      backarrow key (Closes: #775952).
  * Refresh Debian patches.
  * Update years in debian/copyright.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 04 Mar 2015 17:09:50 +0100

xterm (314-1) experimental; urgency=low

  * New upstream release.
  * Update copy of XTerm FAQ to revision 1.289 (dated 2014/12/19).

 -- Sven Joachim <svenjoac@gmx.de>  Tue, 30 Dec 2014 18:25:43 +0100

xterm (313-1) experimental; urgency=low

  * New upstream release.
  * Refresh Debian patches.
  * Bump Standards-Version to 3.9.6, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 04 Dec 2014 18:51:09 +0100

xterm (312-1) unstable; urgency=medium

  * New upstream release.
    - Undo change to do_select_regex() in xterm 311 (Closes: #762978).

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 29 Sep 2014 17:16:25 +0200

xterm (311-1) unstable; urgency=low

  * New upstream release.
    - Mention xclip in manpage as an alternative workaround for copying
      clipboard data, noting that selectToClipboard is the recommended
      approach (Closes: #639094).
    - Correct initialization for regular-expression feature of
      exec-selectable and insert-selectable actions.
      Modify logic for exec-formatted and insert-formatted actions to
      ensure that the formatting occurs just after the selection is
      received (Closes: #758633).
    - Account for state of reverse-video in special case of cursor coloring
      (Closes: #759734).
    - Enable the "Escape Sequence" menu entry when an OSC 50 is received.
      Also disable it if the escape sequence specifies no font
      (Closes: #760208).
    - Improve fix for the fontsel menu entry from xterm 304: because the