@@ -7,6 +7,7 @@ xterm (316-1) UNRELEASED; urgency=low
       backarrow key (Closes: #775952).
   * Refresh Debian patches.
   * Update years in debian/copyright.
+  * Update copy of XTerm FAQ to revision 1.293 (dated 2015/02/16).
 
  -- Sven Joachim <svenjoac@gmx.de>  Wed, 04 Mar 2015 17:09:50 +0100
 
